--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="http://example.org/css/reset.css">
-	<link rel="stylesheet" href="http://example.org/css/style.css">
+	<link rel="stylesheet" href="http://davinci.biohub.solutions/interreg/css/reset.css">
+	<link rel="stylesheet" href="http://davinci.biohub.solutions/interreg/css/style.css">
 	
-    <link rel="stylesheet" href="http://example.org/css/blue.css">
+    <link rel="stylesheet" href="http://davinci.biohub.solutions/interreg/css/blue.css">
     
-	<script src="http://example.org/js/modernizr.js"></script>
+	<script src="http://davinci.biohub.solutions/interreg/js/modernizr.js"></script>
 	<title>Interreg Dermatolocial Service Description</title>
 </head>
 <body>
@@ -249,8 +249,8 @@ It is also possible to perform skin transplants and the application of synthetic
 	</div>
 	<a href="#0" class="cd-close-panel">Close</a>
 </section>
-<script src="http://example.org/js/jquery-2.1.1.js"></script>
-<script src="http://example.org/js/jquery.mobile.custom.min.js"></script>
-<script src="http://example.org/js/main.js"></script>
+<script src="http://davinci.biohub.solutions/interreg/js/jquery-2.1.1.js"></script>
+<script src="http://davinci.biohub.solutions/interreg/js/jquery.mobile.custom.min.js"></script>
+<script src="http://davinci.biohub.solutions/interreg/js/main.js"></script>
 </body>
 </html>
